--- a/ReactNativePushnotification/android/app/build.gradle
+++ b/ReactNativePushnotification/android/app/build.gradle
@@ -134,6 +134,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -191,6 +192,9 @@ dependencies {
         force = true;
     }
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    compile 'com.android.support:multidex:1.0.1' //enter the latest version
+    implementation 'com.google.firebase:firebase-inappmessaging-display:19.1.1'
+    implementation 'com.google.firebase:firebase-installations:16.3.3'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
