--- a/ReactNativePushnotification/android/settings.gradle
+++ b/ReactNativePushnotification/android/settings.gradle
@@ -1,4 +1,10 @@
 rootProject.name = 'ReactNativePushnotification'
+include ':@react-native-firebase_iid'
+project(':@react-native-firebase_iid').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/iid/android')
+include ':@react-native-firebase_app'
+project(':@react-native-firebase_app').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/app/android')
+include ':@react-native-firebase_messaging'
+project(':@react-native-firebase_messaging').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/messaging/android')
 include ':react-native-push-notification'
 project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
